@@ -1,28 +1,5 @@
 package be.ugent.idlab.knows.mappingweaver.mappingplan.extend_functions.fno;
 
-import java.io.InputStream;
-import java.io.Serializable;
-import java.lang.reflect.Array;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.stream.Stream;
-
-import org.apache.jena.rdf.model.Model;
-import org.apache.jena.rdf.model.ModelFactory;
-import org.apache.jena.rdf.model.ResIterator;
-import org.apache.jena.rdf.model.Resource;
-import org.apache.jena.riot.RiotException;
-import org.apache.jena.vocabulary.RDF;
-import org.jspecify.annotations.Nullable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import be.ugent.idlab.knows.amo.blocks.SolutionMapping;
 import be.ugent.idlab.knows.amo.blocks.nodes.LiteralNode;
 import be.ugent.idlab.knows.amo.blocks.nodes.RDFNode;
@@ -32,37 +9,33 @@ import be.ugent.idlab.knows.functions.agent.Agent;
 import be.ugent.idlab.knows.functions.agent.AgentFactory;
 import be.ugent.idlab.knows.functions.agent.Arguments;
 import be.ugent.idlab.knows.functions.agent.functionModelProvider.fno.exception.FnOException;
+import be.ugent.idlab.knows.functions.agent.functionModelProvider.fno.exception.FunctionNotFoundException;
+import be.ugent.idlab.knows.functions.agent.model.Function;
+import be.ugent.idlab.knows.mappingweaver.exceptions.MappingException;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.Serializable;
+import java.lang.reflect.Array;
+import java.util.*;
+import java.util.stream.Stream;
 
 /**
  * Function that applies the specified FnO function to the input
  */
 public class FnOFunction implements ExtendFunction, Serializable {
 
-    private static final class OpenedResource {
-        private final InputStream inputStream;
-        private final String source;
-
-        private OpenedResource(InputStream inputStream, String source) {
-            this.inputStream = inputStream;
-            this.source = source;
-        }
-    }
-
-    private static final String CLASSPATH_PREFIX = "classpath://";
-
     private static final String[] DEFAULT_FUNCTION_DESCRIPTIONS = new String[]{
-            "classpath://functions_grel.ttl",
-            "classpath://grel_java_mapping.ttl",
-            "classpath://functions_idlab.ttl",
-            "classpath://functions_idlab_classes_java_mapping.ttl",
+            "functions_grel.ttl",
+            "grel_java_mapping.ttl",
+            "fno/functions_idlab.ttl",
+            "fno/functions_idlab_classes_java_mapping.ttl",
     };
 
     // mutable only via configure(); volatile for safe cross-thread reads
     private static volatile String[] effectiveDescriptions = DEFAULT_FUNCTION_DESCRIPTIONS;
-    private static volatile FnOParameterTranslator parameterTranslator = null;
-    private static volatile FnOReturnTypeTranslator returnTypeTranslator = null;
-
-    private static final String FNO_FUNCTION_TYPE = "https://w3id.org/function/ontology#Function";
 
     private static final Logger LOG = LoggerFactory.getLogger(FnOFunction.class);
 
@@ -71,7 +44,6 @@ public class FnOFunction implements ExtendFunction, Serializable {
 
     // not serialized; recreated per JVM instance
     private static volatile Agent cachedAgent = null;
-    private static volatile Model effectiveModel = null;
     private static final Object agentLock = new Object();
 
     /**
@@ -89,84 +61,11 @@ public class FnOFunction implements ExtendFunction, Serializable {
             effectiveDescriptions = customFunctionsOnly
                     ? custom
                     : Stream.concat(
-                        Arrays.stream(DEFAULT_FUNCTION_DESCRIPTIONS).filter(d -> {
-                            String stripped = d.startsWith(CLASSPATH_PREFIX) ? d.substring(CLASSPATH_PREFIX.length()) : d;
-                            return !customSet.contains(stripped) && !customSet.contains(d);
-                        }),
+                        Arrays.stream(DEFAULT_FUNCTION_DESCRIPTIONS).filter(defaultDescription -> !customSet.contains(defaultDescription)),
                         Arrays.stream(custom))
                             .toArray(String[]::new);
-            parameterTranslator = null;
-            returnTypeTranslator = null;
             cachedAgent = null;
-            effectiveModel = null;
         }
-    }
-
-    private static Model getEffectiveModel() {
-        if (effectiveModel == null) {
-            synchronized (agentLock) {
-                if (effectiveModel == null) {
-                    effectiveModel = buildModel(effectiveDescriptions);
-                }
-            }
-        }
-        return effectiveModel;
-    }
-
-    private static Model buildModel(String[] descriptions) {
-        Model model = ModelFactory.createDefaultModel();
-        for (String description : descriptions) {
-            OpenedResource opened = openResource(description);
-            LOG.debug("Parsing FnO description '{}'", opened != null ? opened.source : abbreviateDescription(description));
-            if (opened == null) {
-                throw new IllegalStateException("FnO description '" + description + "' not found on the classpath or filesystem.");
-            }
-            try (InputStream in = opened.inputStream) {
-                try {
-                    model.read(in, null, "TURTLE");
-                } catch (RiotException e) {
-                    throw new IllegalStateException("Failed to parse FnO description '" + description + "': " + messageOf(e));
-                }
-            } catch (IllegalStateException e) {
-                throw e;
-            } catch (Exception e) {
-                throw new IllegalStateException("Failed to load FnO description '" + description + "': " + messageOf(e), e);
-            }
-        }
-        return model;
-    }
-
-    private static String abbreviateDescription(String description) {
-        return description.length() > 80
-                ? description.substring(0, 40) + "\u2026" + description.substring(description.length() - 35)
-                : description;
-    }
-
-    private static String messageOf(Throwable t) {
-        String message = t.getMessage();
-        return (message == null || message.isBlank()) ? t.toString() : message;
-    }
-
-    private static FnOParameterTranslator getParameterTranslator() {
-        if (parameterTranslator == null) {
-            synchronized (agentLock) {
-                if (parameterTranslator == null) {
-                    parameterTranslator = new FnOParameterTranslator(getEffectiveModel());
-                }
-            }
-        }
-        return parameterTranslator;
-    }
-
-    private static FnOReturnTypeTranslator getReturnTypeTranslator() {
-        if (returnTypeTranslator == null) {
-            synchronized (agentLock) {
-                if (returnTypeTranslator == null) {
-                    returnTypeTranslator = new FnOReturnTypeTranslator(getEffectiveModel());
-                }
-            }
-        }
-        return returnTypeTranslator;
     }
 
     private final String identifier;
@@ -174,16 +73,34 @@ public class FnOFunction implements ExtendFunction, Serializable {
     private final String datatypeIRI;
     private final String returnType;
     
-    public FnOFunction(String identifier, List<FnOParameter> parameters) throws FnOException {
-        this(identifier, parameters, null);
-    }
-    
     public FnOFunction(String identifier, List<FnOParameter> parameters, String returnType) throws FnOException {
         this.identifier = identifier;
         this.parameters = parameters;
         this.returnType = returnType;
-        FnOReturnTypeTranslator translator = getReturnTypeTranslator();
-        this.datatypeIRI = translator.resolveOutputDatatype(identifier, returnType);
+
+        // get the return datatype from the function
+        final Function function = getFunction(identifier);
+        if (function.getReturnParameters().isEmpty()) {
+            LOG.warn("FnO function '{}' has no declared fno:returns list; assuming the default (String).",
+                    identifier);
+            datatypeIRI = XSD_STRING;
+        } else {
+            be.ugent.idlab.knows.functions.agent.model.fno.FnOParameter returnParam = (be.ugent.idlab.knows.functions.agent.model.fno.FnOParameter) function.getReturnParameters().getFirst();  // Java FnO functions should have only one return parameter
+            datatypeIRI = returnParam.getDataTypeUri();
+        }
+    }
+
+    private static @NonNull Function getFunction(String identifier) throws FunctionNotFoundException {
+        String normalizedIdentifier = identifier.trim();
+        normalizedIdentifier = normalizedIdentifier.startsWith("<") && normalizedIdentifier.endsWith(">")
+                ? normalizedIdentifier.substring(1, identifier.length() - 1)
+                : normalizedIdentifier;
+        final Map<String, Function> functions = getAgent().getFunctions();
+        final Function function = functions.get(normalizedIdentifier);
+        if (function == null) {
+            throw new FunctionNotFoundException("FnO function '" + normalizedIdentifier + "' not found.");
+        }
+        return function;
     }
 
     /**
@@ -195,14 +112,7 @@ public class FnOFunction implements ExtendFunction, Serializable {
             synchronized (agentLock) {
                 if (cachedAgent == null) {
                     try {
-                        // serialize the already-parsed model once rather than re-reading individual files
-                        java.io.StringWriter sw = new java.io.StringWriter();
-                        getEffectiveModel().write(sw, "TURTLE");
-                        cachedAgent = AgentFactory.createFromFnO(sw.toString());
-                        if (LOG.isDebugEnabled()) {
-                            List<String> discoveredFunctions = discoverFunctions(getEffectiveModel());
-                            LOG.debug("Discovered/loaded {} FnO functions: {}", discoveredFunctions.size(), discoveredFunctions);
-                        }
+                        cachedAgent = AgentFactory.createFromFnO(effectiveDescriptions);
                     } catch (Exception e) {
                         throw new RuntimeException("Failed to create FnO Agent", e);
                     }
@@ -212,13 +122,6 @@ public class FnOFunction implements ExtendFunction, Serializable {
         return cachedAgent;
     }
 
-    /**
-     * Runs the function through the FnO Agent and returns its raw result, which may be a
-     * single value or a collection of them.
-     *
-     * @param solutionMapping the solution mapping to read the arguments from
-     * @return the Agent's result, or null if the function produced no value
-     */
     /**
      * Runs the function once for every combination of its parameters' values and returns
      * everything the runs produced.
@@ -236,7 +139,7 @@ public class FnOFunction implements ExtendFunction, Serializable {
         List<List<String>> valuesPerParameter = new ArrayList<>(this.parameters.size());
 
         for (FnOParameter parameter : this.parameters) {
-            predicates.add(getParameterTranslator().translate(parameter.getIdentifier()));
+            predicates.add(parameter.getIdentifier());
             valuesPerParameter.add(parameter.getParameters(solutionMapping));
         }
 
@@ -270,7 +173,7 @@ public class FnOFunction implements ExtendFunction, Serializable {
             return getAgent().execute(this.identifier, arguments);
         } catch (FnOException e) {
             // Function could not be resolved (e.g. function not found): a real mapping error.
-            throw new RuntimeException(e);
+            throw new MappingException(e);
         } catch (Exception e) {
             // The function executed but could not produce a value (e.g. substring index out
             // of range). This is a data error: no triple is generated for this value, but the
@@ -291,7 +194,7 @@ public class FnOFunction implements ExtendFunction, Serializable {
         // Only one value fits where a single value is expected. A function producing
         // several of them belongs in a place that can carry them all, which is what
         // applyMulti() is for; taking the first is the best that can be done here.
-        return values.get(0);
+        return values.getFirst();
     }
 
     @Override
@@ -335,52 +238,11 @@ public class FnOFunction implements ExtendFunction, Serializable {
         return List.of(result.toString());
     }
 
-    private static List<String> discoverFunctions(Model model) {
-        Set<String> discovered = new TreeSet<>();
-        Resource functionType = model.createResource(FNO_FUNCTION_TYPE);
-        ResIterator functions = model.listResourcesWithProperty(RDF.type, functionType);
-        while (functions.hasNext()) {
-            Resource function = functions.next();
-            if (function.isURIResource()) {
-                discovered.add(function.getURI());
-            }
-        }
-        return List.copyOf(discovered);
-    }
-
-    private static @Nullable OpenedResource openResource(String name) {
-        if (name.startsWith(CLASSPATH_PREFIX)) {
-            String resource = name.substring(CLASSPATH_PREFIX.length());
-            return openClasspathResource(resource);
-        }
-        try {
-            java.nio.file.Path path = java.nio.file.Paths.get(name);
-            if (java.nio.file.Files.exists(path)) {
-                java.nio.file.Path absolutePath = path.toAbsolutePath().normalize();
-                return new OpenedResource(java.nio.file.Files.newInputStream(absolutePath), absolutePath.toString());
-            }
-        } catch (Exception ignored) {}
-        return openClasspathResource(name);
-    }
-
-    private static @Nullable OpenedResource openClasspathResource(String resourceName) {
-        ClassLoader loader = FnOFunction.class.getClassLoader();
-        java.net.URL resourceUrl = loader.getResource(resourceName);
-        if (resourceUrl == null) {
-            return null;
-        }
-        InputStream in = loader.getResourceAsStream(resourceName);
-        if (in == null) {
-            return null;
-        }
-        return new OpenedResource(in, resourceUrl.toString());
-    }
-
     @Override
     public @Nullable RDFNode applyToNode(@Nullable SolutionMapping solutionMapping) {
         List<RDFNode> nodes = applyMultiToNode(solutionMapping);
 
-        return nodes.isEmpty() ? null : nodes.get(0);
+        return nodes.isEmpty() ? null : nodes.getFirst();
     }
 
     @Override
